Fixed Filtres overflow in tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a {
     font-size: 1.0625em;
     font-weight: 700;
 
-    padding: 0 19px;
+    padding: 0 17px;
     height: 50px;
     border-radius: 25px;
     border: solid 2px #D9D9D9;
